[package]
authors = [ 'EverX Labs <hello@everx.dev>' ]
edition = '2021'
license = 'Apache-2.0'
name = 'ever-struct'
repository = 'https://github.com/everx-labs/ever-struct'
rust-version = '1.65'
version = '1.1.17'

[dependencies]
anyhow = '1.0'
thiserror = '1.0'
ever_block = { git = 'https://github.com/everx-labs/ever-block.git', tag = '1.11.16' }

